# You-Niverse

./: README.md
backend/: Dockerfile  deploy.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  github.py  project.py
backend/app/core/: config.py
backend/app/db/: connection.py
backend/app/schemas/: auth.py  github.py  project.py
backend/app/utils/: crypt.py  github.py  project.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/electron/: main.cjs
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: Calender.tsx  ChangePlanet.tsx  CountPlanet.tsx  DynamicPlanetData.tsx  EditableTextBox.tsx  ErrorBoundary.tsx  FlightForm.tsx  GithubModal.tsx  GoogleLogin.tsx  ProgressBar.tsx  ProjectHeader.tsx  ScrumSection.tsx  StreaksBox.tsx  UserInfoModal.tsx
frontend/src/pages/: AddPlanetPage.tsx  CreateAccountPage.tsx  LoginPage.tsx  MainPage.tsx  PlanetPage.tsx  PlanetProjectPage.tsx
frontend/src/types/: GithubUser.ts  GoogleUser.ts  Project.ts  User.ts
frontend/src/utils/: db.ts
