[tool.poetry]
name = "you-niverse-backend"
version = "0.1.0"
description = "You:Niverse App Backend Implementation"
authors = ["tejava317 <frogjj@kaist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pymongo = "^4.10.1"
pydantic-settings = "^2.7.1"
passlib = "^1.7.4"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
